update pipfile, add ref kernels

--- a/Pipfile
+++ b/Pipfile
@@ -10,26 +10,26 @@ sklearn = "*"
 pandas = "*"
 jupytext = "*"
 seaborn = "*"
-lightgbm = "*"
-xgboost = "*"
-pillow = "*"
-wordcloud = "*"
-catboost = "*"
+#lightgbm = "*"
+#xgboost = "*"
+#pillow = "*"
+#wordcloud = "*"
+#catboost = "*"
 tqdm = "*"
-plotly = "*"
-nltk = "*"
-langdetect = "*"
-eli5 = "*"
-ipython = "*"
+#plotly = "*"
+#nltk = "*"
+#langdetect = "*"
+#eli5 = "*"
+#ipython = "*"
 sklearn-pandas = "*"
 ipykernel = "*"
-ascii-graph = "*"
-jinja2 = "*"
-coloredlogs = "*"
-gamete = {path = "/home/batman/git/py_gamete",editable = true}
-pyyaml = "*"
+#ascii-graph = "*"
+#jinja2 = "*"
+#coloredlogs = "*"
+#gamete = {path = "/home/batman/git/py_gamete",editable = true}
+#pyyaml = "*"
 deprecated = "*"
-joblib = "*"
+#joblib = "*"
 opencv-python = "*"
 
 [requires]
