--- a/Pipfile
+++ b/Pipfile
@@ -3,6 +3,9 @@ name = "pypi"
 url = "https://pypi.org/simple"
 verify_ssl = true
 
+[scripts]
+app = "./dash_app/app.py"
+
 [dev-packages]
 
 [packages]
@@ -35,6 +38,7 @@ scikit-image = "*"
 tensorflow-gpu = "*"
 pillow = "*"
 imutils = {editable = true,path = "/home/batman/kaggle/imutils"}
+dash = "*"
 
 [requires]
 python_version = "3.6"
