refactor ref kernel

--- a/Pipfile
+++ b/Pipfile
@@ -13,33 +13,18 @@ sklearn = "*"
 pandas = "*"
 jupytext = "*"
 seaborn = "*"
-#lightgbm = "*"
-#xgboost = "*"
-#pillow = "*"
-#wordcloud = "*"
-#catboost = "*"
 tqdm = "*"
-#plotly = "*"
-#nltk = "*"
-#langdetect = "*"
-#eli5 = "*"
-#ipython = "*"
 sklearn-pandas = "*"
 ipykernel = "*"
-#ascii-graph = "*"
-#jinja2 = "*"
-#coloredlogs = "*"
-#gamete = {path = "/home/batman/git/py_gamete",editable = true}
-#pyyaml = "*"
 deprecated = "*"
-#joblib = "*"
 opencv-python = "*"
 scikit-image = "*"
 tensorflow-gpu = "*"
 pillow = "*"
-imutils = {editable = true,path = "/home/batman/kaggle/imutils"}
+imutils = {path = "/home/batman/kaggle/imutils",editable = true}
 dash = "*"
 dash-daq = "*"
+numpy = "*"
 
 [requires]
 python_version = "3.6"
