--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,10 +10,10 @@ pandas = "^1.1.2"
 dash = "^1.16.0"
 scikit-learn = "^0.23.2"
 matplotlib = "^3.3.1"
-imutils = "^0.5.3"
 opencv-python = "^4.4.0"
 dash-daq = "^0.5.0"
 seaborn = "^0.11.0"
+imutils = {git = "https://github.com/MarcusJones/imutils"}
 
 [tool.poetry.dev-dependencies]
 
